crates/elenchus-parser/tests/snapshots/errors__and_literal_missing.snap
---
source: crates/elenchus-parser/tests/errors.rs
expression: "err(\"PREMISE g:\\n    WHEN x a\\n    AND\\n    THEN x b\\n\")"
---
Syntax Error at line 3, col 5: expected THEN to complete the WHEN ... THEN implication
  |     AND
  |     ^--- here
